task3/oai-ext-dn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: oai-ext-dn
  name: oai-ext-dn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oai-ext-dn
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/rfsim5g-oai-traffic-net: "true"
        io.kompose.service: oai-ext-dn
    spec:
      containers:
        - command:
            - /bin/bash
            - -c
            - ' iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE; ip route add 12.1.1.0/24 via 192.168.72.134 dev eth0; sleep infinity'
          image: oaisoftwarealliance/trf-gen-cn5g:focal
          livenessProbe:
            exec:
              command:
                - /bin/bash -c "ping -c 2 192.168.72.134"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: rfsim5g-oai-ext-dn
          resources: {}
          securityContext:
            privileged: true
      restartPolicy: Always
status: {}
