task3/oai-gnb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: oai-gnb
  name: oai-gnb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oai-gnb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/rfsim5g-oai-public-net: "true"
        io.kompose.service: oai-gnb
    spec:
      containers:
        - env:
            - name: USE_ADDITIONAL_OPTIONS
              value: --sa -E --rfsim --log_config.global_log_options level,nocolor,time
          image: oaisoftwarealliance/oai-gnb:develop
          livenessProbe:
            exec:
              command:
                - /bin/bash -c "pgrep nr-softmodem"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: rfsim5g-oai-gnb
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /opt/oai-gnb/etc/gnb.conf
              name: oai-gnb-claim0
      restartPolicy: Always
      volumes:
        - name: oai-gnb-claim0
          persistentVolumeClaim:
            claimName: oai-gnb-claim0
status: {}
