task3/oai-nr-ue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: oai-nr-ue
  name: oai-nr-ue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oai-nr-ue
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/rfsim5g-oai-public-net: "true"
        io.kompose.service: oai-nr-ue
    spec:
      containers:
        - env:
            - name: USE_ADDITIONAL_OPTIONS
              value: -E --rfsim -r 106 --numerology 1 --uicc0.imsi 208990100001100 -C 3619200000 --rfsimulator.serveraddr 192.168.71.140 --log_config.global_log_options level,nocolor,time
          image: oaisoftwarealliance/oai-nr-ue:develop
          livenessProbe:
            exec:
              command:
                - /bin/bash -c "pgrep nr-uesoftmodem"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: rfsim5g-oai-nr-ue
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /opt/oai-nr-ue/etc/nr-ue.conf
              name: oai-nr-ue-claim0
      restartPolicy: Always
      volumes:
        - name: oai-nr-ue-claim0
          persistentVolumeClaim:
            claimName: oai-nr-ue-claim0
status: {}
