task3/oai-nrf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o converted_yaml/
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: oai-nrf
  name: oai-nrf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oai-nrf
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o converted_yaml/
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/rfsim5g-oai-public-net: "true"
        io.kompose.service: oai-nrf
    spec:
      containers:
        - env:
            - name: NRF_INTERFACE_NAME_FOR_SBI
              value: eth0
            - name: TZ
              value: Europe/Paris
          image: oaisoftwarealliance/oai-nrf:latest
          name: rfsim5g-oai-nrf
          resources: {}
      restartPolicy: Always
status: {}
