task3/oai-nrf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oai-nrf-service
spec:
  selector:
    app: oai-nrf
  ports:
    - name: sbi
      protocol: TCP
      port: 80
      targetPort: 80
    - name: sbi-http2
      protocol: TCP
      port: 9090
      targetPort: 9090
