task3/rfsim5g-oai-traffic-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: rfsim5g-oai-traffic-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/rfsim5g-oai-traffic-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rfsim5g-oai-traffic-net: "true"
